--- a/Portfolio final htmlcss/index.html
+++ b/Portfolio final htmlcss/index.html
@@ -82,22 +82,22 @@
 <p class="sub mitrabsub">A selection of my HTML/CSS work</p>
 
 <div class="portfolio">
-    <a href="#" class="portfolioitem">
+    <a href="https://jorgeluisborgestribute.netlify.app/" class="portfolioitem">
            <img src="tribute.png" alt="" srcset="" class="portfolioimagen"></a>
 
-    <a href="#" class="portfolioitem">
+    <a href="https://meliproject.netlify.app/" class="portfolioitem">
             <img src="product.png" alt="" srcset="" class="portfolioimagen"></a>
             
-    <a href="#" class="portfolioitem">
+    <a href="https://fccmaidanaportfolio.netlify.app/" class="portfolioitem">
            <img src="frecc.png" alt="" srcset="" class="portfolioimagen"></a>
             
-    <a href="#" class="portfolioitem">
+    <a href="https://maidanaph.netlify.app/" class="portfolioitem">
            <img src="ph.png" alt="" srcset="" class="portfolioimagen"></a>
 
-    <a href="#" class="portfolioitem">
+    <a href="https://tedeatrescafeteria.netlify.app/" class="portfolioitem">
            <img src="tede.png" alt="" srcset="" class="portfolioimagen"></a>
 
-    <a href="#" class="portfolioitem">
+    <a href="https://animatemaidana.netlify.app/" class="portfolioitem">
            <img src="anim.png" alt="" srcset="" class="portfolioimagen"></a>
 
 
